# kedro_whisper_pipeline

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
src/audio_transcription/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/audio_transcription/datasets/: audio_dataset.py
src/audio_transcription/nodes/: reduce_noise.py  transcribe_audio.py
src/audio_transcription/pipelines/: pipeline.py
